# santarsiero_ferrario_sweng

./: CMakeLists.txt  README.md  build.sh  count_errors.sh  matrixB.txt  program.stderr
include/: matrix_multiplication.h  utils.hpp
src/: main.cpp  matrix_mult.cpp  multiply_matrices_without_errors.cpp  this_is_the_bug.cpp
test/: seed_test_matrix_multiplication.cpp  test_matrix_multiplication.cpp
